fix: update create-reservation form

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -157,3 +157,10 @@
         @apply bg-background text-foreground;
     }
 }
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+}
